Fixed some things in api fetcher
